add weather icons

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,3 +9,5 @@ $fullhd-enabled: false;
 $body-font-size: 1.25em;
 
 @import "../node_modules/bulma/bulma.sass";
+
+@import "../node_modules/weathericons/sass/weather-icons.scss";
