--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -44,20 +44,33 @@ $body-font-size: 1.25em;
 
 .up-fade {
   opacity: 0;
-  animation: 1.2s cubic-bezier(0, 0, 0.16, 1) 300ms 1 normal forwards running
+  animation: 1.2s cubic-bezier(0, 0, 0.16, 1) 200ms 1 normal forwards running
     upFade;
+}
+
+.spin {
+  animation: 1.2s linear 0 infinite normal forwards running spinAround;
+}
+
+@keyframes spinAround {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 $staggeramounts: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 12);
 
 @each $amount in $staggeramounts {
   .stagger-quick-#{$amount} {
-    animation-delay: #{500 + ($amount * 100)}ms;
+    animation-delay: #{200 + ($amount * 100)}ms;
   }
 }
 
 @each $amount in $staggeramounts {
   .stagger-up-#{$amount} {
-    animation-delay: #{300 + ($amount * 200)}ms;
+    animation-delay: #{200 + ($amount * 200)}ms;
   }
 }
